# aicc

./: CMakeLists.txt  README.md  flake.nix
examples/: hello_world.c
nix/: package.nix
src/: main.c
